--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -73,7 +73,7 @@ Metrics/PerceivedComplexity:
   Max: 15
 
 Naming/VariableNumber:
-  Enabled: true
+  Enabled: false
 
 Style/AndOr:
   Enabled: true
