--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,10 +27,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.5.1
+          ruby-version: 2.6.5
       - uses: wbari/start-mongoDB@v0.2
         with:
-          mongoDBVersion: '3.6'
+          mongoDBVersion: "3.6"
       - name: Cache Gems
         uses: actions/cache@v2
         with:
