Add RabbitMQ to Docker Add EventSource and AcaEntities gems Update to Ruby v 2.7.2 and update gems

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.4"
+version: "3.5"
 
 services:
   app:
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: ./.docker/development/Dockerfile
       args:
-        RUBY_VERSION: "2.6.6"
+        RUBY_VERSION: "2.7.2"
         BUNDLER_VERSION_OVERRIDE: "2.2.14"
     image: polypress_dev:0.3.0
     links:
@@ -20,22 +20,45 @@ services:
       - node_modules:/polypress/node_modules
       - packs:/polypress/public/packs
     environment:
-      - INTERFACE="0.0.0.0"
-      - RAILS_ENV=${RAILS_ENV:-development}
-      - DB_DATABASE=dcas_journal_development
-      - DB_HOST=db
-      - DB_PORT=27017
+      - ACTION_MAILER_HOST=${ACTION_MAILER_HOST:-localhost}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-AKIA123456789}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-AbcD987654321}
       - AWS_REGION=${AWS_REGION:-us-east-1}
       - AWS_S3_ROOT_NAMESPACE=${AWS_S3_ROOT_NAMESPACE:-root_bucket}
-      - ACTION_MAILER_HOST=${ACTION_MAILER_HOST:-localhost}
-      - SMTP_PORT=${SMTP_PORT:-587}
-      - SMTP_HOST=${SMTP_HOST:-localhost}
-      - SMTP_DOMAIN=${SMTP_DOMAIN:-ideacrew.com}
-      - SMTP_USERNAME=${SMTP_USERNAME:-username}
-      - SMTP_PASSWORD=${SMTP_PASSWORD:-password}
+      - AWS_BUCKET_ROOT_NAMESPACE=${AWS_BUCKET_ROOT_NAMESPACE:-root_bucket}
+      - AWS_CONNECT_INSTANCE_ID=${AWS_CONNECT_INSTANCE_ID:-123456789}
+      - AWS_CONNECT_INSTANCE_URL=${AWS_CONNECT_INSTANCE_URL:-http://localhost}
       - BLIND_INDEX_MASTER_KEY=ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+      - DB_DATABASE=dcas_journal_development
+      - DB_HOST=db
+      - DB_PORT=27017
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=postgres_local
+      - FIN_SVC_PRIVATE_KEY=""
+      - FIN_SVC_API_SECRET=""
+      - INTERFACE="0.0.0.0"
+      - QB_CLIENT_ID=${QB_CLIENT_ID:-1234567890}
+      - QB_CLIENT_SECRET=${QB_CLIENT_SECRET:-1234567890}
+      - QB_REALM_ID=${QB_REALM_ID:-1234567890}
+      - RABBITMQ_HOST=${RABBITMQ_HOST:-amqp://amqp}
+      - RABBITMQ_VHOST=${RABBITMQ_VHOST:-event_source}
+      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD:-guest}
+      - RABBITMQ_PORT=${RABBITMQ_PORT:-5672}
+      - RABBITMQ_URL=${RABBITMQ_URL:-amqp://guest:guest@amqp:5672}
+      - RABBITMQ_USERNAME=${AMQP_USERNAME:-guest}
+      - RAILS_ENV=${RAILS_ENV:-development}
+      - SFTP_HOST=""
+      - SFTP_PORT=""
+      - SMTP_DOMAIN=${SMTP_DOMAIN:-ideacrew.com}
+      - SMTP_HOST=${SMTP_HOST:-localhost}
+      - SMTP_PASSWORD=${SMTP_PASSWORD:-password}
+      - SMTP_PORT=${SMTP_PORT:-587}
+      - SMTP_USERNAME=${SMTP_USERNAME:-username}
+      - SNS_HOST=""
+      - SNS_PORT=""
+      - WF_BILLER_KEY=${WF_API_KEY:-1234567890}
+      - WF_API_SECRET=${WF_API_KEY:-1234567890}
+      - WF_PRIVATE_KEY=${WF_API_KEY:-1234567890}
     tmpfs:
       - /tmp
     command: bash -c "rm -f tmp/pids/server.pid && mkdir -p tmp/pids && yarn install --check-files && bundle install && bundle exec puma -C config/puma.rb"
@@ -48,6 +71,22 @@ services:
       - mongodb_config:/data/configdb
     ports:
       - 27017:27017
+  amqp:
+    image: rabbitmq:3.8-management
+    container_name: rabbitmq
+    volumes:
+      - rabbitmq_etc:/etc/rabbitmq/
+      - rabbitmq_data:/var/lib/rabbitmq/
+      - rabbitmq_logs:/var/log/rabbitmq/
+    environment:
+      - RABBITMQ_ERLANG_COOKIE=${RABBITMQ_ERLANG_COOKIE:-123456789}
+      - RABBITMQ_USER=${RABBITMQ_DEFAULT_USER:-guest}
+      - RABBITMQ_PASSWORD=${RABBITMQ_DEFAULT_PASS:-guest}
+    ports:
+      - 4369
+      - 5672:5672
+      - 25672:25672
+      - 15672:15672
 
 volumes:
   bundle:
@@ -56,3 +95,6 @@ volumes:
   packs:
   mongodb:
   mongodb_config:
+  rabbitmq_etc:
+  rabbitmq_data:
+  rabbitmq_logs:
