--- a/.docker/production/Dockerfile
+++ b/.docker/production/Dockerfile
@@ -1,20 +1,30 @@
 ########################
-###    app config    ###
+### app/rails config ###
 ########################
 
-FROM ruby:2.6.6 AS app
+FROM ruby:2.7.2 AS app
 
 LABEL author="IdeaCrew"
 
-ENV HOME /polypress
+ARG NODE_MAJOR
 
-RUN mkdir -p $HOME
+# NodeJS download/config
+RUN curl -sL https://deb.nodesource.com/setup_$NODE_MAJOR.x | bash -
 
-WORKDIR $HOME
+# Yarn download/config
+RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
+    echo 'deb http://dl.yarnpkg.com/debian/ stable main' > /etc/apt/sources.list.d/yarn.list
 
-RUN curl -sL https://deb.nodesource.com/setup_12.x | bash -
+ARG YARN_VERSION
+# Install required packages/libraries
+RUN apt-get update && \
+    apt-get -yq dist-upgrade && \
+    apt-get install -y git gcc openssl libyaml-dev libyaml-cpp-dev libyaml-cpp0.6 libffi-dev libffi6 libreadline-dev \
+    zlibc libgdbm-dev libncurses-dev autoconf fontconfig unzip zip sshpass bzip2 libxrender1 libxext6 \
+    build-essential nodejs yarn=$YARN_VERSION-1 && \
+    apt-get autoremove -y
 
-# Configure bundler and PATH
+# Configure bundler and PATH, install bundler version
 ENV LANG=C.UTF-8 \
     GEM_HOME=/bundle \
     BUNDLE_JOBS=4 \
@@ -22,84 +32,37 @@ ENV LANG=C.UTF-8 \
 ENV BUNDLE_PATH $GEM_HOME
 ENV BUNDLE_APP_CONFIG=$BUNDLE_PATH \
     BUNDLE_BIN=$BUNDLE_PATH/bin
+ENV PATH $BUNDLE_BIN:$GEM_HOME/gems/bin:$PATH
 
-RUN apt-get update && \
-    apt-get -yq dist-upgrade && \
-    apt-get install -y imagemagick tzdata build-essential nodejs vim && \
-    apt-get autoremove -y && \
-    gem install bundler && \
-    npm install --global yarn
+ARG BUNDLER_VERSION_OVERRIDE
+ENV BUNDLER_VERSION=$BUNDLER_VERSION_OVERRIDE
+RUN gem update --system && gem install bundler:$BUNDLER_VERSION
 
-COPY package.json package.json
-COPY yarn.lock yarn.lock
+# Configure app home directory
+ENV HOME /polypress
+RUN mkdir -p $HOME
+WORKDIR $HOME
+COPY . $HOME
+
 RUN yarn install
 
 # Setting env up
 ENV RAILS_ENV='production'
 ENV NODE_ENV='production'
 
-COPY . .
+# Adding gems
+COPY Gemfile Gemfile
+COPY Gemfile.lock Gemfile.lock
 
-RUN bundle config set without 'development test'
-RUN bundle install --jobs 20 --retry 5
+RUN bundle install --jobs 20 --retry 5 --without development test 
+#RUN rm -f /polypress/config/master.key && rm -f /polypress/config/credentials.yml.enc
 
-ARG DB_DATABASE
-ARG DB_USERNAME
-ARG DB_PASSWORD
-ARG DB_HOST
-ARG ACTION_MAILER_HOST
-ARG SMTP_PORT
-ARG SMTP_HOST
-ARG SMTP_DOMAIN
-ARG SMTP_USERNAME
-ARG SMTP_PASSWORD
-ARG AWS_ACCESS_KEY_ID
-ARG AWS_SECRET_ACCESS_KEY
-ARG AWS_REGION
-ARG AWS_BUCKET_ROOT_NAMESPACE
-ARG AWS_CONNECT_INSTANCE_ID
-ARG AWS_CONNECT_INSTANCE_URL
-
-RUN export DB_DATABASE=$DB_DATABASE && \
-    export DB_USERNAME=$DB_USERNAME && \
-    export DB_PASSWORD=$DB_PASSWORD && \
-    export DB_HOST=$DB_HOST && \
-    export ACTION_MAILER_HOST=$ACTION_MAILER_HOST && \
-    export SMTP_PORT=$SMTP_PORT && \
-    export SMTP_HOST=$SMTP_HOST && \
-    export SMTP_DOMAIN=$SMTP_DOMAIN && \
-    export SMTP_USERNAME=$SMTP_USERNAME && \
-    export SMTP_PASSWORD=$SMTP_PASSWORD && \
-    export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID && \
-    export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY && \
-    export AWS_REGION=$AWS_REGION && \
-    export AWS_BUCKET_ROOT_NAMESPACE=$AWS_BUCKET_ROOT_NAMESPACE && \
-    export AWS_CONNECT_INSTANCE_ID=$AWS_CONNECT_INSTANCE_ID && \
-    export AWS_CONNECT_INSTANCE_URL=$AWS_CONNECT_INSTANCE_URL && \
-    bundle exec rake assets:precompile && \
-    unset DB_DATABASE && \
-    unset DB_USERNAME && \
-    unset DB_PASSWORD && \
-    unset DB_HOST && \
-    unset ACTION_MAILER_HOST && \
-    unset SMTP_PORT && \
-    unset SMTP_HOST && \
-    unset SMTP_DOMAIN && \
-    unset SMTP_USERNAME && \
-    unset SMTP_PASSWORD && \
-    unset AWS_ACCESS_KEY_ID && \
-    unset AWS_SECRET_ACCESS_KEY && \
-    unset AWS_REGION && \
-    unset AWS_BUCKET_ROOT_NAMESPACE && \
-    unset AWS_CONNECT_INSTANCE_ID && \
-    unset AWS_CONNECT_INSTANCE_URL
-
-RUN rm -f /polypress/config/master.key && rm -f /polypress/config/credentials.yml.enc
+#CMD ["./entrypoints/docker-entrypoint.sh"]
 
 
 ########################
 ### web/nginx config ###
-########################
+######################## 
 
 FROM nginx:1.17.6-alpine as web
 
@@ -109,3 +72,4 @@ RUN mkdir /polypress
 COPY --from=app /polypress/public /polypress/
 COPY .docker/production/nginx.conf /etc/nginx/conf.d/polypress.conf
 RUN mv /etc/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf-bkp
+
