need assets precompile

--- a/.docker/production/Dockerfile
+++ b/.docker/production/Dockerfile
@@ -55,6 +55,7 @@ COPY Gemfile Gemfile
 COPY Gemfile.lock Gemfile.lock
 
 RUN bundle install --jobs 20 --retry 5 --without development test 
+RUN bundle exec rake assets:precompile
 #RUN rm -f /polypress/config/master.key && rm -f /polypress/config/credentials.yml.enc
 
 #CMD ["./entrypoints/docker-entrypoint.sh"]
