--- a/.docker/production/Dockerfile
+++ b/.docker/production/Dockerfile
@@ -50,6 +50,29 @@ RUN yarn install
 ENV RAILS_ENV='production'
 ENV NODE_ENV='production'
 
+ARG SECRET_KEY_BASE
+ARG POLYPRESS_DB_HOST
+ARG POLYPRESS_DB_PORT
+ARG POLYPRESS_DB_NAME
+ARG RABBITMQ_URL
+ARG RABBITMQ_HOST
+ARG RABBITMQ_PORT
+ARG RABBITMQ_VHOST
+ARG MITC_HOST
+ARG MITC_PORT
+ARG MITC_URL
+ENV POLYPRESS_DB_HOST=$POLYPRESS_DB_HOST
+ENV POLYPRESS_DB_PORT=$POLYPRESS_DB_PORT
+ENV POLYPRESS_DB_NAME=$POLYPRESS_DB_NAME
+ENV RABBITMQ_URL=$RABBITMQ_URL
+ENV RABBITMQ_HOST=$RABBITMQ_HOST
+ENV RABBITMQ_PORT=$RABBITMQ_PORT
+ENV RABBITMQ_VHOST=$RABBITMQ_VHOST
+ENV MITC_HOST=$MITC_HOST
+ENV MITC_PORT=$MITC_PORT
+ENV MITC_URL=$MITC_URL
+ENV SECRET_KEY_BASE=$SECRET_KEY_BASE
+
 # Adding gems
 COPY Gemfile Gemfile
 COPY Gemfile.lock Gemfile.lock
