base image build script and Dockerfile changes

--- a/.docker/base/Dockerfile
+++ b/.docker/base/Dockerfile
@@ -2,9 +2,27 @@
 ### app/rails config ###
 ########################
 
-FROM public.ecr.aws/ideacrew/polypress:base AS app
+FROM ruby:2.7.2 AS app
 
 LABEL author="IdeaCrew"
+
+ARG NODE_MAJOR
+
+# NodeJS download/config
+RUN curl -sL https://deb.nodesource.com/setup_$NODE_MAJOR.x | bash -
+
+# Yarn download/config
+RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
+    echo 'deb http://dl.yarnpkg.com/debian/ stable main' > /etc/apt/sources.list.d/yarn.list
+
+ARG YARN_VERSION
+# Install required packages/libraries
+RUN apt-get update && \
+    apt-get -yq dist-upgrade && \
+    apt-get install -y git gcc openssl libyaml-dev libyaml-cpp-dev libyaml-cpp0.6 libffi-dev libffi6 libreadline-dev \
+    zlibc libgdbm-dev libncurses-dev autoconf fontconfig unzip zip sshpass bzip2 libxrender1 libxext6 \
+    build-essential nodejs yarn=$YARN_VERSION-1 && \
+    apt-get autoremove -y
 
 # Configure bundler and PATH, install bundler version
 ENV LANG=C.UTF-8 \
@@ -60,7 +78,7 @@ COPY Gemfile Gemfile
 COPY Gemfile.lock Gemfile.lock
 
 RUN bundle install --jobs 20 --retry 5 --without development test 
-RUN bundle exec rake assets:precompile
+#RUN bundle exec rake assets:precompile
 #RUN rm -f /polypress/config/master.key && rm -f /polypress/config/credentials.yml.enc
 
 #CMD ["./entrypoints/docker-entrypoint.sh"]
