--- a/config/settings.yml
+++ b/config/settings.yml
@@ -372,10 +372,10 @@ notices:
       non_discrimination_attachment: "shop_non_discrimination_attachment.pdf"
       employee_appeal_rights: "employee_appeal_rights.pdf"
     partials:
-      template: "notice_kinds/template.html.erb"
-      header: "shared/shop_header.html.erb"
-      footer: "shared/shop_footer.html.erb"
-      layout: "pdf_layout.html.erb"
+      template: "notice_kinds/template"
+      header: "shared/shop_header"
+      footer: "shared/shop_footer"
+      layout: "pdf_layout"
 
   individual:
     store_paper_notice: true
@@ -385,10 +385,10 @@ notices:
       non_discrimination_attachment: "ivl_non_discrimination.pdf"
       voter_application: "voter_application.pdf"
     partials:
-      template: "notice_kinds/ivl_template.html.erb"
-      header: "shared/header_ivl.html.erb"
-      footer: "shared/footer_ivl.html.erb"
-      layout: "ivl_pdf_layout.html.erb"
+      template: "notice_kinds/ivl_template"
+      header: "shared/header_ivl"
+      footer: "shared/footer_ivl"
+      layout: "ivl_pdf_layout"
 
 paper_notice: 'paper-notices'
 # Note: Remote Aceess keys ad URL's Provided by DC checkbook
