Refs #EventSource: update RABBITMQ_URL to RABBITMQ_URL_EVENT_SOURCE in docker files

--- a/.docker/base/Dockerfile
+++ b/.docker/base/Dockerfile
@@ -64,7 +64,7 @@ ARG SECRET_KEY_BASE
 ARG POLYPRESS_DB_HOST
 ARG POLYPRESS_DB_PORT
 ARG POLYPRESS_DB_NAME
-ARG RABBITMQ_URL
+ARG RABBITMQ_URL_EVENT_SOURCE
 ARG RABBITMQ_HOST
 ARG RABBITMQ_PORT
 ARG RABBITMQ_VHOST
@@ -74,7 +74,7 @@ ARG MITC_URL
 ENV POLYPRESS_DB_HOST=$POLYPRESS_DB_HOST
 ENV POLYPRESS_DB_PORT=$POLYPRESS_DB_PORT
 ENV POLYPRESS_DB_NAME=$POLYPRESS_DB_NAME
-ENV RABBITMQ_URL=$RABBITMQ_URL
+ENV RABBITMQ_URL_EVENT_SOURCE=$RABBITMQ_URL_EVENT_SOURCE
 ENV RABBITMQ_HOST=$RABBITMQ_HOST
 ENV RABBITMQ_PORT=$RABBITMQ_PORT
 ENV RABBITMQ_VHOST=$RABBITMQ_VHOST
