--- a/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/system/config/templates/features/enroll_app/enroll_app.yml
@@ -209,7 +209,7 @@ registry:
           - key: :producer_advisory_committee_url
             item: ""
           - key: :mailer_logo_file_name
-            item: "coverme.jpg"
+            item: "logo_me.svg"
           - key: :broker_course_administering_organization_number
             item: '(877) 880-1335'
           - key: :broker_course_administering_organization
@@ -325,6 +325,9 @@ registry:
       - key: :counties_import
         is_enabled: true
         item: "SHOP_ZipCode_CY2021_FINAL_ME.xlsx"
+      - key: :display_hbx_id_on_notices
+        item: :display_hbx_id_on_notices
+        is_enabled: true
   - namespace:
       - :features
       - :enroll_app
