Fix startup process to conform to micro service conventions Update to Ruby 2.7.3 Update gem file and event_source initializer Add ME notice definition file Fix database cleaner for mongoid and rspec

--- a/.docker/development/Dockerfile
+++ b/.docker/development/Dockerfile
@@ -1,41 +1,40 @@
-FROM ruby:2.7.2 AS polypress
+FROM ruby:2.7.3 AS polypress
 
 LABEL author="IdeaCrew"
 
 ENV HOME /polypress
-
 RUN mkdir -p $HOME
-
 WORKDIR $HOME
 
 RUN curl -sL https://deb.nodesource.com/setup_12.x | bash -
 
+RUN apt-get update \
+  && apt-get -yq dist-upgrade \
+  && apt-get install -y tzdata build-essential nodejs vim \
+  && apt-get autoremove -y \
+  && npm install --global yarn
+
 # Configure bundler and PATH
+ENV GEM_HOME="/usr/local/bundle"
+
 ENV LANG=C.UTF-8 \
-    GEM_HOME=/bundle \
-    BUNDLE_JOBS=4 \
-    BUNDLE_RETRY=3
-ENV BUNDLE_PATH $GEM_HOME
-ENV BUNDLE_APP_CONFIG=$BUNDLE_PATH \
-    BUNDLE_BIN=$BUNDLE_PATH/bin
-ENV PATH /polypress/bin:$BUNDLE_BIN:$PATH
+  BUNDLE_PATH=$GEM_HOME \
+  BUNDLE_JOBS=4 \
+  BUNDLE_RETRY=3
+ENV BUNDLE_BIN=$BUNDLE_PATH/bin
 
-ARG BUNDLER_VERSION_OVERRIDE
-RUN echo $BUNDLER_VERSION_OVERRIDE
-RUN apt-get update && \
-    apt-get -yq dist-upgrade && \
-    apt-get install -y tzdata build-essential nodejs vim && \
-    apt-get autoremove -y && \
-    npm install --global yarn
+RUN mkdir -p $BUNDLE_PATH && mkdir -p $BUNDLE_BIN
 
-RUN gem install --source "https://rubygems.org" bundler:2.2.14
-
+ENV PATH $GEM_HOME/bin:$GEM_HOME/gems/bin:$PATH
 
 COPY . $HOME
 
-# Setting env up
-ENV RAILS_ENV='development'
-ENV NODE_ENV='development'
+RUN gem install --source "https://rubygems.org" bundler --version '2.2.24'
 
-# RUN bundle config set deployment 'true' && \
-RUN    bundle install
+RUN cd $HOME && bundle install && bundle binstubs bundler
+# RUN cd $HOME && yarn add @rails/webpacker@5.4.0 && yarn add --dev webpack-dev-server
+# RUN cd $HOME && rails webpacker:install:erb
+# RUN cd $HOME && yarn add bootstrap && yarn add @popperjs/core
+
+RUN unset BUNDLE_PATH
+RUN unset BUNDLE_BIN
