Fix UI setup, add configs: - Run yarn add @rails/webpacker@5.4.0 && yarn add --dev webpack-dev-server - Run webpacker:install:erb - Run yarn add bootstrap && yarn add @popperjs/core

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   polypress:
-    image: polypress_dev:0.7.0
+    image: polypress:release_0.7.0
     build:
       context: .
       dockerfile: ./.docker/development/Dockerfile
