--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@
 .byebug_history
 .bash_history
 .local
+.irb_history
+.yardoc/
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
