WIP adding render_section tag and associated classes Update docker-compose service: mongodb:laatest Disable polypress despendency on rabbmq dependency (temporary) Remove Tag namespace collition in Entities::Tags

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,10 +31,10 @@ services:
     command: bash -c "rm -f tmp/pids/server.pid && mkdir -p tmp/pids && yarn install --check-files && bundle install && bundle exec puma -C config/puma.rb"
     depends_on:
       - mongodb
-      - rabbitmq
+      # - rabbitmq
 
   mongodb:
-    image: mongo:4.2
+    image: mongo:latest
     volumes:
       - mongodb:/data/db
       - mongodb_config:/data/configdb
