--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -34,6 +34,6 @@ jobs:
       - name: run rubocop
         run: |
           bundle exec rubocop
-      - name: run tests
-        run: |
-          bundle exec rspec
+      # - name: run tests
+      #   run: |
+      #     bundle exec rspec
