--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build:
       context: .
       dockerfile: ./.docker/development/Dockerfile
+    container_name: polypress_local
     ports:
       - "3000:3000"
     volumes:
@@ -56,6 +57,11 @@ services:
     ports:
       - 5672:5672
       - 15672:15672
+
+networks:
+  default:
+    external:
+      name: dev_vpc
 
 volumes:
   bundle:
