use services instead of marketplace actions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,9 @@
   },
   "[ruby]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "cSpell.words": [
+    "rabbitmq",
+    "rabbitmqctl"
+  ]
 }
