--- a/.github/workflows/quality-workbench.yml
+++ b/.github/workflows/quality-workbench.yml
@@ -27,18 +27,35 @@ jobs:
       - run: bundle exec rubocop
   rspec:
     runs-on: ubuntu-latest
+    services:
+      mongo:
+        image: mongo:4.2
+        ports:
+          - 27017:27017
+        options: >-
+          --name "mongo"
+          --health-cmd mongo
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      rabbitmq:
+        image: rabbitmq:latest
+        ports:
+          - 5672:5672
+          - 15672:15672
+        options: >-
+          --name "rabbitmq"
+          --health-cmd "rabbitmqctl node_health_check"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
-      - uses: wbari/start-mongoDB@v0.2
-        with:
-          mongoDBVersion: '4.2'
-      - name: Boot RabbitMQ
-        run: |
-          sudo apt-get update
-          sudo apt-get install rabbitmq-server
-          sudo rabbitmqctl add_vhost event_source
-          sudo rabbitmqctl set_permissions -p event_source guest ".*" ".*" ".*"
+      - run: |
+          docker exec rabbitmq rabbitmqctl add_vhost /
+          docker exec rabbitmq rabbitmqctl add_vhost event_source
+          docker exec rabbitmq rabbitmqctl set_permissions -p event_source guest ".*" ".*" ".*"
       - uses: actions/cache@v2
         with:
           path: vendor/bundle
