--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,11 @@
   },
   "[ruby]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  },
+  "cSpell.words": [
+    "POLYPRESS",
+    "rabbitmq",
+    "rabbitmqctl",
+    "vhost"
+  ]
 }
