change user to polypress, add ownership to aws

--- a/.docker/production/Dockerfile.gha
+++ b/.docker/production/Dockerfile.gha
@@ -7,6 +7,8 @@ ARG RUBY_VERSION=2.7.3
 FROM ruby:$RUBY_VERSION-slim-buster as base
 LABEL author="IdeaCrew"
 
+ENV USERNAME=polypress
+
 ARG DEBIAN_FRONTEND=noninteractive
 
 # Taken from Gemfile.lock
@@ -60,11 +62,13 @@ RUN gem update --system
 RUN rm -f /usr/local/bin/ruby/gems/*/specifications/default/bundler-*.gemspec
 RUN gem install bundler -v $BUNDLER_VERSION
 
-RUN groupadd --gid 1001 nonroot \
-  && useradd --uid 1001 --gid nonroot --shell /bin/bash --create-home nonroot
+RUN groupadd --gid 1001 $USERNAME \
+  && useradd --uid 1001 --gid $USERNAME --shell /bin/bash --create-home $USERNAME
 
 RUN mkdir $HOME \
-  && chown -R nonroot:nonroot $HOME
+  && chown -R $USERNAME:$USERNAME $HOME
+
+RUN chown -R $USERNAME:$USERNAME /aws
 
 # Configure app home directory
 WORKDIR $HOME
@@ -131,28 +135,28 @@ ENV RABBITMQ_HOST=$RABBITMQ_HOST_DEFAULT
 ENV RABBITMQ_PORT=$RABBITMQ_PORT_DEFAULT
 ENV RABBITMQ_VHOST=$RABBITMQ_VHOST_DEFAULT
 
-COPY --chown=nonroot:nonroot package.json $HOME/
-COPY --chown=nonroot:nonroot yarn.lock $HOME/
+COPY --chown=$USERNAME:$USERNAME package.json $HOME/
+COPY --chown=$USERNAME:$USERNAME yarn.lock $HOME/
 
 RUN yarn install \
   && (rm -rf /tmp/* || true)
 
-COPY --chown=nonroot:nonroot ./project_gems/effective_datatables-2.6.14/effective_datatables-2.6.14.gemspec $HOME/project_gems/effective_datatables-2.6.14/effective_datatables-2.6.14.gemspec
-COPY --chown=nonroot:nonroot ./project_gems/liquid-5.0.1/liquid.gemspec $HOME/project_gems/liquid-5.0.1/liquid.gemspec
-COPY --chown=nonroot:nonroot ./project_gems/liquid-5.0.1/lib/liquid/version.rb $HOME/project_gems/liquid-5.0.1/lib/liquid/version.rb
+COPY --chown=$USERNAME:$USERNAME ./project_gems/effective_datatables-2.6.14/effective_datatables-2.6.14.gemspec $HOME/project_gems/effective_datatables-2.6.14/effective_datatables-2.6.14.gemspec
+COPY --chown=$USERNAME:$USERNAME ./project_gems/liquid-5.0.1/liquid.gemspec $HOME/project_gems/liquid-5.0.1/liquid.gemspec
+COPY --chown=$USERNAME:$USERNAME ./project_gems/liquid-5.0.1/lib/liquid/version.rb $HOME/project_gems/liquid-5.0.1/lib/liquid/version.rb
 
-COPY --chown=nonroot:nonroot ./Gemfile $HOME/Gemfile
-COPY --chown=nonroot:nonroot ./Gemfile.lock $HOME/Gemfile.lock
+COPY --chown=$USERNAME:$USERNAME ./Gemfile $HOME/Gemfile
+COPY --chown=$USERNAME:$USERNAME ./Gemfile.lock $HOME/Gemfile.lock
 
 RUN bundle config set --local without 'development test' \
   && bundle install
 
 RUN bundle exec rails webpacker:install:erb
 
-COPY --chown=nonroot:nonroot . $HOME
-COPY --chown=nonroot:nonroot ./.docker/config/master.key $HOME/config
-COPY --chown=nonroot:nonroot ./.docker/config/credentials.yml.enc $HOME/config
-COPY --chown=nonroot:nonroot ./.docker/config/mongoid.yml $HOME/config
+COPY --chown=$USERNAME:$USERNAME . $HOME
+COPY --chown=$USERNAME:$USERNAME ./.docker/config/master.key $HOME/config
+COPY --chown=$USERNAME:$USERNAME ./.docker/config/credentials.yml.enc $HOME/config
+COPY --chown=$USERNAME:$USERNAME ./.docker/config/mongoid.yml $HOME/config
 
 RUN bundle exec rake assets:precompile \
   && yarn cache clean \
@@ -173,17 +177,17 @@ RUN rm -rf $GEM_HOME/ruby/*/cache
 FROM base as deploy
 
 # Copy prebuilt gems
-COPY --chown=nonroot:nonroot --from=prod_gems_and_assets $BUNDLE_PATH $BUNDLE_PATH
+COPY --chown=$USERNAME:$USERNAME --from=prod_gems_and_assets $BUNDLE_PATH $BUNDLE_PATH
 
 # Copy all app code again (sans gems, node_modules, assets)
-COPY --chown=nonroot:nonroot . $HOME
+COPY --chown=$USERNAME:$USERNAME . $HOME
 
 # Copy prebuilt assets
-COPY --chown=nonroot:nonroot --from=prod_gems_and_assets $HOME/public $HOME/public
+COPY --chown=$USERNAME:$USERNAME --from=prod_gems_and_assets $HOME/public $HOME/public
 
 # Copy environment-based config files
-COPY --chown=nonroot:nonroot ./.docker/config/mongoid.yml $HOME/config
-COPY --chown=nonroot:nonroot ./.docker/config/credentials.yml.enc $HOME/config
-COPY --chown=nonroot:nonroot ./.docker/config/master.key $HOME/config
+COPY --chown=$USERNAME:$USERNAME ./.docker/config/mongoid.yml $HOME/config
+COPY --chown=$USERNAME:$USERNAME ./.docker/config/credentials.yml.enc $HOME/config
+COPY --chown=$USERNAME:$USERNAME ./.docker/config/master.key $HOME/config
 
-USER nonroot 
+USER $USERNAME 
