--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,6 @@
 !/tmp/pids/
 !/tmp/pids/.keep
 
-
 /public/assets
 .byebug_history
 .bash_history
@@ -33,7 +32,7 @@ doc/
 
 /public/packs
 /public/packs-test
-/node_modules
+node_modules
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
