--- a/.docker/production/Dockerfile.gha
+++ b/.docker/production/Dockerfile.gha
@@ -28,11 +28,10 @@ RUN apt-get update \
       fontconfig \
       libcurl4-openssl-dev \
       libffi6 \
-      libsodium-dev \
+      libsodium23 \
       libxext6 \
       libxrender1 \
       libyaml-cpp0.6 \
-      libyaml-dev \
       openssl \
       nano \
       sshpass \
@@ -114,25 +113,18 @@ RUN apt-get update -qq \
 
 FROM builder as prod_gems_and_assets
 
+ARG HOSTNAME=localhost
+
 # Polypress Specific Config
-ARG POLYPRESS_DB_HOST_DEFAULT=localhost
-ARG POLYPRESS_DB_PORT_DEFAULT=27017
-ARG POLYPRESS_DB_NAME_DEFAULT=polypress_production
-ENV POLYPRESS_DB_HOST=$POLYPRESS_DB_HOST_DEFAULT
-ENV POLYPRESS_DB_PORT=$POLYPRESS_DB_PORT_DEFAULT
-ENV POLYPRESS_DB_NAME=$POLYPRESS_DB_NAME_DEFAULT
+ENV POLYPRESS_DB_HOST=${HOSTNAME}
+ENV POLYPRESS_DB_NAME=polypress_production
+ENV POLYPRESS_DB_PORT=27017
 
 # Needed for most repos, not service-specific
-ARG RABBITMQ_URL_DEFAULT=amqp://localhost:5672
-ARG RABBITMQ_URL_EVENT_SOURCE_DEFAULT=amqp://localhost
-ARG RABBITMQ_HOST_DEFAULT=amqp://localhost
-ARG RABBITMQ_PORT_DEFAULT=5672
-ARG RABBITMQ_VHOST_DEFAULT=event_source
-ENV RABBITMQ_URL=$RABBITMQ_URL_DEFAULT
-ENV RABBITMQ_URL_EVENT_SOURCE=$RABBITMQ_URL_EVENT_SOURCE_DEFAULT
-ENV RABBITMQ_HOST=$RABBITMQ_HOST_DEFAULT
-ENV RABBITMQ_PORT=$RABBITMQ_PORT_DEFAULT
-ENV RABBITMQ_VHOST=$RABBITMQ_VHOST_DEFAULT
+ARG RABBITMQ_URL=amqp://${HOSTNAME}:5672
+ARG RABBITMQ_URL_EVENT_SOURCE=amqp://${HOSTNAME}
+ARG RABBITMQ_HOST=amqp://${HOSTNAME}
+ARG RABBITMQ_VHOST=event_source
 
 COPY --chown=$USERNAME:$USERNAME package.json $HOME/
 COPY --chown=$USERNAME:$USERNAME yarn.lock $HOME/
@@ -157,7 +149,7 @@ COPY --chown=$USERNAME:$USERNAME ./.docker/config/master.key $HOME/config
 COPY --chown=$USERNAME:$USERNAME ./.docker/config/credentials.yml.enc $HOME/config
 COPY --chown=$USERNAME:$USERNAME ./.docker/config/mongoid.yml $HOME/config
 
-RUN bundle exec rake assets:precompile \
+RUN bundle exec rails assets:precompile \
   && yarn cache clean \
   && (rm -rf /tmp/* || true) \
   # Cleanup
@@ -174,6 +166,21 @@ RUN rm -rf $GEM_HOME/ruby/*/cache
 ################################################################
 
 FROM base as deploy
+
+ARG HOSTNAME=localhost
+
+ENV POLYPRESS_DB_AUTH=true
+ENV POLYPRESS_DB_NAME=anything
+ENV POLYPRESS_DB_HOST=anything
+ENV POLYPRESS_DB_PORT=anything
+ENV POLYPRESS_DB_REPLICA_SET_NAME=anything
+ENV POLYPRESS_DB_USERNAME=anything
+ENV POLYPRESS_DB_PASSWORD=anything
+
+ENV RABBITMQ_URL=amqp://${HOSTNAME}:5672
+ENV RABBITMQ_URL_EVENT_SOURCE=amqp://${HOSTNAME}
+ENV RABBITMQ_HOST=amqp://${HOSTNAME}
+ENV RABBITMQ_VHOST=event_source
 
 # Copy prebuilt gems
 COPY --chown=$USERNAME:$USERNAME --from=prod_gems_and_assets $BUNDLE_PATH $BUNDLE_PATH
