--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -16,7 +16,6 @@ concurrency:
 env:
   RABBITMQ_DEFAULT_USER: "guest"
   RABBITMQ_DEFAULT_PASS: "guest"
-  SHOULD_DEPLOY: ${{ github.event_name != 'pull_request' }}
 
 jobs:
   prep:
@@ -27,6 +26,8 @@ jobs:
       registry: ${{ steps.prep.outputs.registry }}
       shortSha: ${{ steps.prep.outputs.short_sha}}
       branchName: ${{ steps.prep.outputs.branch_name }}
+      latestTag: ${{ steps.prep.outputs.latest_tag }}
+      repositoryName: ${{ steps.prep.outputs.repository_name }}
     steps:
       - name: Git branch name
         id: git-branch-name
@@ -35,13 +36,16 @@ jobs:
         id: prep
         run: |
           SHORT_SHA=$(echo $GITHUB_SHA | head -c7)
+          REPO=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')
           TAG=${{ env.GIT_BRANCH_NAME }}-$(echo $GITHUB_SHA | head -c7)
-          IMAGE="public.ecr.aws/ideacrew/polypress"
+          IMAGE=public.ecr.aws/ideacrew/$REPO
           echo ::set-output name=tagged_image::${IMAGE}:${TAG}
           echo ::set-output name=tag::${TAG}
           echo ::set-output name=registry::public.ecr.aws
           echo ::set-output name=short_sha::$SHORT_SHA
           echo ::set-output name=branch_name::${{ env.GIT_BRANCH_NAME }}
+          echo ::set-output name=repository_name::$REPO
+          echo ::set-output name=latest_tag::${IMAGE}:latest
 
   # Uses buildx to build and push the image
   build-and-upload-image:
@@ -122,24 +126,21 @@ jobs:
           target: deploy
           # needed to access mongo and rabbit on GHA machine
           network: host
-          # send to public registry
-          push: ${{ env.SHOULD_DEPLOY }}
-          # create local image (for scanning)
-          load: false
-
-          ### Adding -alpha to the image tag while this is in testing ###
-          tags: ${{ needs.prep.outputs.taggedImage }}
-
+          # send to public registry if not a pull request
+          push: ${{ github.event_name != 'pull_request' }}
+          # create local image (for scanning) if it is a pull request
+          load: ${{ github.event_name == 'pull_request' }}
+          tags: ${{ needs.prep.outputs.taggedImage }}, ${{ needs.prep.outputs.latestTag }}
           cache-from: type=local,src=/tmp/.buildx-cache
           # Note the mode=max here
           # More: https://github.com/moby/buildkit#--export-cache-options
           # And: https://github.com/docker/buildx#--cache-tonametypetypekeyvalue
           cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new
           build-args: |
-            POLYPRESS_DB_HOST_DEFAULT=172.17.0.1
-            RABBITMQ_URL_DEFAULT=amqp://172.17.0.1:5672
-            RABBITMQ_HOST_DEFAULT=amqp://172.17.0.1
-            RABBITMQ_URL_EVENT_SOURCE_DEFAULT=amqp://172.17.0.1
+            HOSTNAME=172.17.0.1
+      
+      - name: Check Console access
+        run: docker run --network="host" ${{ needs.prep.outputs.taggedImage }} /bin/bash .docker/check-console.sh
 
       - name: Scan Docker image
         if: github.event_name != 'pull_request'
