--- a/.docker/production/Dockerfile.gha
+++ b/.docker/production/Dockerfile.gha
@@ -25,8 +25,9 @@ RUN mkdir -p /usr/share/man/man1 /usr/share/man/man2
 RUN apt-get update \
     && apt-get -yq dist-upgrade  \
     && apt-get install -y \
+      curl \
       fontconfig \
-      libcurl4-openssl-dev \
+      libcurl4 \
       libffi6 \
       libsodium23 \
       libxext6 \
@@ -42,6 +43,11 @@ RUN apt-get update \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
     && truncate -s 0 /var/log/*log
+
+RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" \
+    && unzip awscliv2.zip -d /tmp \
+    && /tmp/aws/install \
+    && rm -rf /tmp/aws /tmp/awscliv2.zip awscliv2.zip
 
 # Configure bundler and PATH, install bundler version
 ENV GEM_HOME=/usr/local/bundle
